--- a/SASS/components/_form.sass
+++ b/SASS/components/_form.sass
@@ -1,18 +1,28 @@
 .book
     height: 50rem
-    background: linear-gradient(110deg,rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 60%, rgba(186, 133, 84, 0.4) 60%, rgba(161, 79, 3, 0.4) 100%), url("../img/form-bg.jpg") center / cover no-repeat
+    background: linear-gradient(110deg,rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 60%, rgba(186, 133, 84, 0.4) 60%, rgba(161, 79, 3, 0.4) 100%), url("../img/form-bg-small.jpg") center / cover no-repeat
     box-shadow: $box-shadow
     border-radius: .5rem
     overflow: hidden
+    @include respond(tab-port)
+        background: linear-gradient(110deg,rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 60%, rgba(186, 133, 84, 0.4) 600%, rgba(161, 79, 3, 0.4) 100%), url("../img/form-bg-small.jpg") center / cover no-repeat
 
 .form 
-    width: 60%
-    padding-top: 5rem
-    padding-left: 5rem
+    width: 70%
+    padding: 5rem 0 0 5rem
+    @include respond(tab-port)
+        width: 100%
+    @include respond(phone)
+        padding: 3.5rem 0 0 3.5rem
     &__group:not(:last-child)
         margin-bottom: 2rem
     &__group:nth-child(4)
         margin-bottom: 3rem
+    @include respond(tab-land)
+        &__group:not(:last-child)
+            margin-bottom: 0
+        &__group:nth-child(4)
+            margin-bottom: 2.5rem
     
     &__input
         font-size: $font-size-paragraph
@@ -24,7 +34,10 @@
         border: none
         border-bottom: .3rem solid transparent
         border-radius: .5rem
-        width: 60%
+        width: 70%
+        @include respond(tab-port)
+            width: 90%
+            box-shadow: $box-shadow
         &:focus
             outline: none
             border-bottom: .3rem solid #66d763
@@ -47,8 +60,13 @@
         transform: translateY(-3rem)
 
     &__group-radio
-        width: 45%
         display: inline-block
+        &:not(:last-child)
+            margin-right: 2rem
+        @include respond(tab-land)
+            display: block
+            &:not(:last-child)
+                margin-bottom: 2rem
 
     &__input-radio
         display: none
