--- a/SASS/components/_tours-card.sass
+++ b/SASS/components/_tours-card.sass
@@ -3,6 +3,10 @@
     perspective: 150rem
     -moz-perspective: 150rem
     position: relative
+    @include respond(tab-land)
+        height: 54rem
+    @media only screen and (max-width: 900px), (hover: none)
+        height: auto
     &__side
         height: 52rem
         width: 100%
@@ -15,13 +19,27 @@
         box-shadow: $box-shadow
         border-radius: .5rem
         overflow: hidden
+        @include respond(tab-land)
+            height: 54rem
+        @media only screen and (max-width: 900px), (hover: none)
+            height: auto
+            position: relative
         &_front
+            @media only screen and (max-width: 900px), (hover: none)
+                padding-bottom: 13rem
         &_back
             background: linear-gradient(120deg, $color-brown-light, $color-brown-dark)
             transform: rotateY(180deg)
+            @media only screen and (max-width: 900px), (hover: none)
+                transform: rotateY(0deg)
+                padding: 12rem 5rem 5rem 5rem
+                margin-top: -11rem
+                clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 100%)
 
     &:hover &__side_front
         transform: rotateY(-180deg)
+        @include respond(tab-port)
+            transform: rotateY(0deg)
     &:hover &__side_back
         transform: rotateY(0deg)
 
@@ -31,11 +49,23 @@
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
         margin-bottom: 4.5rem
         &_1
-            background: $color-brown-light url("../img/card-1.jpg") center / cover no-repeat
+            background: $color-brown-light url("../img/card-1-small.jpg") center / cover no-repeat
+            @media (min-resolution: 192dpi) and (min-width: 671px), (min-width: 1341px)
+                background: $color-brown-light url("../img/card-1.jpg") center / cover no-repeat
         &_2
-            background: $color-brown-light url("../img/card-2.jpg") center / cover no-repeat
+            background: $color-brown-light url("../img/card-2-small.jpg") center / cover no-repeat
+            @media (min-resolution: 192dpi) and (min-width: 671px), (min-width: 1341px)
+                background: $color-brown-light url("../img/card-2.jpg") center / cover no-repeat
         &_3
-            background: $color-brown-light url("../img/card-3.jpg") center / cover no-repeat
+            background: $color-brown-light url("../img/card-3-small.jpg") center / cover no-repeat
+            @media (min-resolution: 192dpi) and (min-width: 671px), (min-width: 1341px)
+                background: $color-brown-light url("../img/card-3.jpg") center / cover no-repeat
+        @media only screen and (max-width: 900px), (hover: none)
+            height: 30rem
+            margin-bottom: 7rem
+        @media only screen and (max-width: 1240px) and (hover: none)
+            height: 24.5rem
+            margin-bottom: 4.5rem
 
     &__title
         font-size: 2.8rem
@@ -46,6 +76,9 @@
         position: absolute
         top: 19rem
         right: 0
+        @include respond(tab-port)
+            top: 24rem
+            font-size: 3.8rem
     &__span
         background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
         &_1
@@ -55,6 +88,8 @@
             position: absolute
             top: 3.2rem
             right: 0
+            @include respond(tab-port)
+                top: 4.4rem
 
     &__desc
         ul
@@ -71,19 +106,28 @@
                 display: inline-block
                 &:not(:last-child)
                     margin-bottom: 2rem
+                @include respond(tab-port)
+                    font-size: 2.7rem
 
     &__backSide-box
         position: absolute
-        top:50%
-        left:50%
+        top: 50%
+        left: 50%
         transform: translate(-50%, -50%)
+        text-align: center
+        @media only screen and (max-width: 900px), (hover: none)
+            position: relative
+            top: 0
+            left: 0
+            transform: translate(0%, 0%)
 
     &__text
         margin-bottom: 9rem
         text-transform: uppercase
         letter-spacing: .2rem
         color: $color-white
-        text-align: center
+        @media only screen and (max-width: 1240px) and (hover: none)
+            margin-bottom: 5rem
         &_1
             font-size: $font-size-paragraph
             font-weight: 300
