--- a/SASS/layout/_footer.sass
+++ b/SASS/layout/_footer.sass
@@ -1,6 +1,8 @@
 .footer
     padding: 8rem
     background-color: #333333
+    @include respond(tab-port)
+        padding-bottom: 5rem
     &__logo
         width: 12rem
     &__list
@@ -10,6 +12,13 @@
         display: inline-block
         &:not(:last-child)
             margin-right: 5rem
+        @include respond(tab-land)
+            &:not(:last-child)
+                margin-right: 2rem
+        @include respond(tab-port)
+            &:not(:last-child)
+                margin: 0
+            padding: 2rem
     &__link
         &:link, &:visited
             color: $color-white
@@ -20,6 +29,9 @@
             font-weight: 300
             display: inline-block
             transition: all .3s
+        @include respond(tab-land)
+            &:link, &:visited
+                font-size: 1.4rem
         &:active
         &:hover
             transform: rotate(5deg) scale(1.2)
