--- a/SASS/layout/_header.sass
+++ b/SASS/layout/_header.sass
@@ -1,8 +1,12 @@
 .header 
     position: relative
     height: 95vh
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url("../img/header-background.jpg") center / cover no-repeat
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url("../img/header-background-small.jpg") center / cover no-repeat
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
+    @include respond(phone)
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%)
+    @media (min-resolution: 192dpi) and (min-width: 671px), (min-width: 1341px)
+        background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url("../img/header-background.jpg") center / cover no-repeat
 
     &__logo
         height: 7rem
@@ -18,3 +22,5 @@
         transform: translate(-50%, -50%)
         width: 100%
         text-align: center
+        @include respond(tab-land)
+            top: 50%
