--- a/SASS/layout/_navigation.sass
+++ b/SASS/layout/_navigation.sass
@@ -13,13 +13,14 @@
         z-index: 200
         text-align: center
         cursor: pointer
+        box-shadow: $box-shadow
 
     &__icon
         position: relative
-        margin-top: 32px
+        margin-top: 3.2rem
         &, &::before, &::after
-            width: 30px
-            height: 2px
+            width: 3rem
+            height: .2rem
             background-color: $color-black
             display: inline-block
         &::before, &::after
@@ -28,14 +29,14 @@
             left: 0
             transition: all .2s
         &::before
-            top: -8px
+            top: -.8rem
         &::after
-            top: 8px
+            top: .8rem
 
     &__btn:hover > &__icon::before
-        top: -10px
+        top: -1rem
     &__btn:hover > &__icon::after
-        top: 10px
+        top: 1rem
 
     &__bg
         width: 7rem
