--- a/SASS/pages/_home.sass
+++ b/SASS/pages/_home.sass
@@ -1,13 +1,18 @@
 .section-about
-    padding: 8rem 0 11rem
+    padding: 8rem 0 12rem
+    @include respond(tab-port)
+        padding-bottom: 50rem
 
 .section-adventure
     padding: 22rem 0
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), url("../img/section-adventure-bg.jpg") center / cover no-repeat
-    // clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%)
-    transform: skewY(7deg)
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), url("../img/section-adventure-bg-small.jpg") center / cover no-repeat
+    transform: skewY(9deg)
     & > *
-        transform: skewY(-7deg)
+        transform: skewY(-9deg)
+    @include respond(tab-land)
+        padding: 16rem 0
+    @media (min-resolution: 192dpi) and (min-width: 671px), (min-width: 1341px)
+        background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), url("../img/section-adventure-bg.jpg") center / cover no-repeat
 
 .section-tours
     padding: 11rem 0 8.5rem
@@ -19,3 +24,5 @@
 .section-book
     padding: 10rem
     background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
+    @include respond(tab-port)
+        padding: 8rem 4rem
